# aureole

./: .cursorrules  README.md
backend/: .dockerignore  CELERY_GUIDE.md  api.py  celery_app.py  celery_examples.py  code_languages.py  commits_domain.py  commits_over_time.py  docker-compose.yml  main.py  pyproject.toml  search.py  start_celery_worker.py  test.sh  test_cache.py  test_q.py  test_redis_connection.py
backend/api/: commits_over_time.py
backend/cache_manager/: cache_facade.py
backend/docker/: Dockerfile.api  Dockerfile.celery  Dockerfile.db_init
backend/jobs/: README.md  celery_app.py  run_tasks.py
backend/jobs/cache_manager/: cx_common.py
backend/jobs/db_manager/: augur_manager.py
backend/original_queries/: affiliation_query.py  cntrb_per_file_query.py  commits_query.py  contributors_query.py  issue_assignee_query.py  issues_query.py  pr_assignee_query.py  pr_files_query.py  pr_response_query.py  prs_query.py
backend/queries/: _celery.py  affiliation.sql  cntrb_per_file.sql  commits.sql  commits_query.py  contributors.sql  issue_assignee.sql  issues.sql  ossf_score.sql  ossf_score_query.py  package_version.sql  package_version_query.py  pr_assignee.sql  pr_file.sql  pr_response.sql  prs.sql  query_template.py  repo_files_query.py  repo_info.sql  repo_info_query.py  repo_languages.sql  repo_languages_query.py  repo_releases.sql  repo_releases_query.py  user_groups_query.py
dots/: package-lock.json  package.json
frontend/: REPO_IDS_UPDATE.md  package-lock.json  package.json  tailwind.config.js
my-first-app/: package-lock.json  package.json
(+49 files in other folders)
